UtahLiveDataTest/src/objects/Grants_API_Document_Status_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Transmission_Date__c</fullName>
        <description>Document Transmission date. Used in Trigger code to avoid query.</description>
        <formula>Grants_API_Document_Status__r.Document_Transmission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Transmission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Transmission_Date_in_MS__c</fullName>
        <description>Document Transmission date. Used in Trigger code to avoid query.</description>
        <formula>Grants_API_Document_Status__r.Document_Transmission_Date_in_MS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Transmission Date in MS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Final__c</fullName>
        <description>Final value from parent for use in queries</description>
        <formula>Grants_API_Document_Status__r.Grants_API_Document_Final__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grants_API_Document_Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Item_ID__c</fullName>
        <description>18 digit Salesforce ID of the record in GovGrants that must be updated with the Grants API Document status</description>
        <label>Grants API Document Item ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Status__c</fullName>
        <label>Grants API Document Status</label>
        <referenceTo>Grants_API_Document_Status__c</referenceTo>
        <relationshipLabel>Grants API Document Status Details</relationshipLabel>
        <relationshipName>Grants_API_Document_Status_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Grants API Document Status Detail</label>
    <nameField>
        <displayFormat>GADSD-{0}</displayFormat>
        <label>Grants API Document Status Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants API Document Status Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>